# ugly

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: benchmark.rs  cli.rs  config.rs  decrypt.rs  engine.rs  error.rs  main.rs
src/crypto/: base58.rs  keygen.rs  matcher.rs  mod.rs
src/resource/: throttle.rs
src/storage/: encrypt.rs  file.rs  mod.rs
src/ui/: progress.rs  stats.rs
