[package]
name = "ugly"
version = "1.0.0"
edition = "2021"
description = "Solana address generator"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1.8"
indicatif = "0.17"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
rpassword = "7.3"
thiserror = "1.0"
ctrlc = "3.4"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
