[package]
name = "ugly"
version = "1.1.0"
edition = "2021"
description = "High-performance Solana vanity address generator with encrypted storage"
license = "MIT"
repository = "https://github.com/9sx77ssl/ugly"
documentation = "https://github.com/9sx77ssl/ugly#readme"
homepage = "https://github.com/9sx77ssl/ugly"
readme = "README.md"
keywords = ["solana", "vanity", "address", "generator", "ed25519"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1.8"
indicatif = "0.17"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
rpassword = "7.3"
thiserror = "1.0"
ctrlc = "3.4"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
